--- a/signalrdemo_deployment.yaml
+++ b/signalrdemo_deployment.yaml
@@ -2,11 +2,11 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    run: signalrdemo
+     app.kubernetes.io/name: signalrdemo
   name: signalrdemo
-  namespace: default
+  namespace: signalrdemo
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       run: signalrdemo
@@ -18,6 +18,6 @@ spec:
       containers:
       - name: signalrdemo-container
         image: signalrdemo
-        imagePullPolicy: Never
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5244
